Added a single test set and removed access token

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -412,7 +412,7 @@
     "import torch\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "\n",
-    "access_token = \"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\"\n",
+    "access_token = \"\"\n",
     "\n",
     "# Specify the model\n",
     "model_name = \"openai-community/gpt2\"\n",
