Changed Prompt and added bleu score

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,40 +40,47 @@
     "llm = Ollama(model='llama2')\n",
     "output_parser=StrOutputParser(\n",
     ")\n",
-    "prompt=ChatPromptTemplate([\n",
-    "        ('system',\"\"\"You are a chef. The user will give you a list of ingredients. You have to create an Indian Dish using those\n",
-    "        ingredients only.\n",
-    "        Use the following template to give your output:\n",
-    "         Ingredients Used:\n",
+    "prompt3 = ChatPromptTemplate([\n",
+    "    ('system', \"\"\"\n",
+    "        You are a master Indian chef specializing in traditional Indian cuisine. The user will give you a list of ingredients, and you are required to create a genuine Indian dish using only those ingredients.\n",
+    "        Use the following structure for your response:\n",
+    "        \n",
+    "        Ingredients Used:\n",
     "            - Ingredient 1\n",
     "            - Ingredient 2\n",
-    "            - other ingredients\n",
-    "         Instructions:\n",
-    "            - Instruction 1\n",
-    "            - Instruction 2\n",
-    "         Do not output anything else apart from Ingredients Used and Instructions.\n",
-    "         \"\"\"),\n",
-    "        (\"user\",\"Ingredients: {Ingredients}\")\n",
-    "\n",
+    "            - (List all ingredients provided by the user)\n",
+    "        \n",
+    "        Instructions:\n",
+    "            - Step 1: (Describe each step of the cooking process in detail)\n",
+    "            - Step 2: (Continue outlining the steps until the dish is complete)\n",
+    "     \n",
+    "        Below are sample instructions for a dish provided. Form your sentences in a similar manner.\n",
+    "        - Step 1: To prepare gourd raita, prepare all the ingredients first.\n",
+    "        - Step 2: Add grated gourd, cucumber, curd, green chillies, salt, cumin powder and coriander in a large bowl.\n",
+    "        - Step 3: Mix well and your raita is ready.\n",
+    "        - Step 4: Serve gourd raita with Garlic Dal, gourd elder greens and phulka for dinner.\n",
+    "        \n",
+    "        Keep your response focused on 'Ingredients Used' and 'Instructions'. Avoid adding additional explanations or extra information.\n",
+    "    \"\"\"),\n",
+    "    ('user', \"Ingredients: {Ingredients}\")\n",
     "    ])\n",
-    "\n",
-    "chain=prompt|llm|output_parser\n",
+    "chain=prompt3|llm|output_parser\n",
     "\n",
     "response=chain.invoke({'Ingredients':data['Processed_Ingredients'][0]})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Ingredients Used:\\n\\n* Salt\\n* Amchur\\n* Karela\\n* Red chilli powder\\n* Gram flour\\n* Onion\\n* Cumin seeds\\n* Coriander powder\\n* Turmeric powder\\n\\nInstructions:\\n\\n* Heat sunflower oil in a pan over medium heat.\\n* Add cumin seeds and let them sizzle for a few seconds.\\n* Add finely chopped onion and sauté until it is translucent.\\n* Add karela (bitter gourd) and sauté for 2-3 minutes, or until it starts to soften.\\n* Add salt, red chilli powder, coriander powder, and turmeric powder, and mix well.\\n* Add gram flour (besan) and mix well.\\n* Add amchur (dried mango powder) and mix well.\\n* Cover the pan and cook for 5-7 minutes, or until the karela is cooked through and the mixture is dry.\\n* Serve hot with rice or roti.'"
+       "'Ingredients Used:\\n\\n* Salt\\n* Amchur (dried mango powder)\\n* Karela (bitter gourd)\\n* Red chili powder\\n* Gram flour (also known as besan)\\n* Onion\\n* Cumin seeds\\n* Coriander powder\\n* Turmeric powder\\n\\nInstructions:\\n\\nStep 1: Finely chop the karela and grind it into a fine paste using little water. Set aside.\\n\\nStep 2: Heat oil in a pan over medium heat. Add cumin seeds, coriander seeds, and red chili powder. Once the seeds start to sizzle, add the finely chopped onion and sauté until it turns light brown.\\n\\nStep 3: Add the ground karela paste to the pan and mix well with the onions and spices. Cook for about 5-7 minutes or until the mixture thickens slightly.\\n\\nStep 4: Add salt, gram flour, and turmeric powder to the pan and mix well. Cook for another minute or two.\\n\\nStep 5: Transfer the mixture to a serving bowl and garnish with chopped cilantro. Serve with phulkas or rice. Enjoy your delicious karela dish!'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +91,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_recipe(recipe_text):\n",
+    "    # Extract ingredients, removing text inside parentheses for Hindi words\n",
+    "    ingredients_section = re.search(r'Ingredients Used:\\n\\n(.*?)\\n\\nInstructions:', recipe_text, re.DOTALL).group(1)\n",
+    "    ingredients = re.findall(r'\\* ([^(\\n]+)', ingredients_section)\n",
+    "    \n",
+    "    # Extract instructions\n",
+    "    instructions_section = re.search(r'Instructions:\\n\\n(.*)', recipe_text, re.DOTALL).group(1)\n",
+    "    instructions = re.findall(r'Step \\d+: (.*?)\\n', instructions_section)\n",
+    "    \n",
+    "    return ingredients, instructions\n",
+    "\n",
+    "# Extracted ingredients and instructions\n",
+    "ingredients, instructions = extract_recipe(response)\n",
+    "ingredients = [ingredient.strip() for ingredient in ingredients]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -102,54 +131,32 @@
        " 'sunflower oil']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lines = response.split('\\n')\n",
-    "\n",
-    "gen_ingredients = []\n",
-    "gen_instructions = []\n",
-    "in_ingredients = False\n",
-    "in_instructions = False\n",
-    "\n",
-    "for line in lines:\n",
-    "    line = line.strip() \n",
-    "    if line == \"Ingredients Used:\":\n",
-    "        in_ingredients = True\n",
-    "        continue\n",
-    "    elif line == \"Instructions:\":\n",
-    "        in_ingredients = False\n",
-    "        in_instructions = True\n",
-    "        continue\n",
-    "    \n",
-    "    if in_ingredients and line.startswith(\"*\"):\n",
-    "        gen_ingredients.append(line[1:].strip())\n",
-    "    elif in_instructions and line.startswith(\"*\"):\n",
-    "        gen_instructions.append(line[1:].strip())\n",
-    "\n",
     "data['Processed_Ingredients'][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n",
-      "0.9\n"
+      "0.8888888888888888\n",
+      "0.8\n"
      ]
     }
    ],
    "source": [
     "actual_ingredients=data['Processed_Ingredients'][0]\n",
-    "gen_ingredients_lower = [ingredient.lower() for ingredient in gen_ingredients]\n",
+    "gen_ingredients_lower = [ingredient.lower() for ingredient in ingredients]\n",
     "\n",
     "total_input_ingredients = len(actual_ingredients)\n",
     "total_ingredients_used = len(gen_ingredients_lower)\n",
@@ -185,30 +192,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "'Finely chop the karela and grind it into a fine paste using little water. Set aside.\\n Heat oil in a pan over medium heat. Add cumin seeds, coriander seeds, and red chili powder. Once the seeds start to sizzle, add the finely chopped onion and sauté until it turns light brown.\\n Add the ground karela paste to the pan and mix well with the onions and spices. Cook for about 5-7 minutes or until the mixture thickens slightly.\\n Add salt, gram flour, and turmeric powder to the pan and mix well. Cook for another minute or two.'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gen_instructions_cleaned='\\n '.join(gen_instructions)\n",
+    "gen_instructions_cleaned='\\n '.join(instructions)\n",
+    "gen_instructions_cleaned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['To begin making the Masala Karela Recipe,de-seed the karela and slice.\\nDo not remove the skin as the skin has all the nutrients.\\nAdd the karela to the pressure cooker with 3 tablespoon of water, salt and turmeric powder and pressure cook for three whistles.\\nRelease the pressure immediately and open the lids.\\nKeep aside.Heat oil in a heavy bottomed pan or a kadhai.\\nAdd cumin seeds and let it sizzle.Once the cumin seeds have sizzled, add onions and saute them till it turns golden brown in color.Add the karela, red chilli powder, amchur powder, coriander powder and besan.\\nStir to combine the masalas into the karela.Drizzle a little extra oil on the top and mix again.\\nCover the pan and simmer Masala Karela stirring occasionally until everything comes together well.\\nTurn off the heat.Transfer Masala Karela into a serving bowl and serve.Serve Masala Karela along with Panchmel Dal and Phulka for a weekday meal with your family.\\n']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['TranslatedInstructions'][0].split('/n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4148104954327206"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gen_instructions_cleaned='\\n '.join(instructions)\n",
     "gen_instructions_cleaned\n",
     "from nltk.translate.bleu_score import sentence_bleu\n",
     "\n",
     "\n",
     "# Tokenize the sentences\n",
     "reference_tokens = data['TranslatedInstructions'][0].split('/n')  # Reference needs to be a list of token lists\n",
-    "candidate_tokens = gen_instructions\n",
-    "weights = (0.5, 0.5, 0, 0)\n",
+    "candidate_tokens = gen_instructions_cleaned\n",
+    "weights = (0.5,0.5,0,0)\n",
     "# Calculate BLEU score\n",
     "bleu_score = sentence_bleu(reference_tokens, candidate_tokens,weights=weights)\n",
     "bleu_score"
