Made Changes in the Jupyter Notebook

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -239,40 +239,40 @@
      "output_type": "stream",
      "text": [
       " Ingredients Used:\n",
-      "        - Tomato\n",
-      "        - Salt\n",
-      "        - Chickpea lentils (Chana Dal)\n",
-      "        - Green chilli\n",
-      "        - Rice\n",
-      "        - Mustard (Rai)\n",
-      "        - BC Belle Bhat Powder (optional)\n",
-      "        - Dry red chilli (whole)\n",
-      "        - Cashew peanuts (mix of cashews and peanuts)\n",
-      "        - Oil (Tail Tali/Oil)\n",
-      "        - Asafoetida (Hing)\n",
-      "        - Cumin seeds (Jeera)\n",
-      "        - White urad dal (Urad Dal)\n",
+      "       - Tomato\n",
+      "       - Salt\n",
+      "       - Chickpea lentils (Chana Dal)\n",
+      "       - Green chili\n",
+      "       - Rice\n",
+      "       - Mustard seeds (Rai)\n",
+      "       - Bc belle bhat powder\n",
+      "       - Dry red chilli\n",
+      "       - Cashew and peanuts\n",
+      "       - Oil (Tail Tukmaria)\n",
+      "       - Asafoetida (Hing)\n",
+      "       - Cumin seeds (Jeera)\n",
+      "       - White urad dal (Urad Dal)\n",
       "\n",
       "   Instructions:\n",
-      "       - Step 1: Cook rice separately and keep it aside. Soak Chickpea lentils for about 30 minutes, then pressure cook with enough water until tender.\n",
-      "       - Step 2: Heat oil in a pan, add cumin seeds and let them splutter. Add dry red chilli, asafoetida, and sauté the spices for a few seconds.\n",
-      "       - Step 3: Add chopped tomatoes to the pan and cook until they become soft. Then, add the cooked chickpea lentils along with the cooking liquid (adjust consistency according to preference).\n",
-      "       - Step 4: Simmer the mixture on low heat, stirring occasionally, for about 10 minutes or until the oil starts separating from dal. Add salt and mix well.\n",
-      "       - Step 5: In a separate pan, roast cashew peanuts lightly. Grind them coarsely (optional). Sprinkle over the cooked chickpea lentils along with the BC Belle Bhat powder before serving.\n",
-      "       - Step 6: Serve this delicious Chana Dal (Chickpea Lentil) dish with cooked rice, gourd elder greens and phulka (Indian flatbread). Enjoy your meal!\n",
-      "Ingredients: ['Tomato', 'Salt', 'Chickpea lentils (Chana Dal)', 'Green chilli', 'Rice', 'Mustard (Rai)', 'BC Belle Bhat Powder (optional)', 'Dry red chilli (whole)', 'Cashew peanuts (mix of cashews and peanuts)', 'Oil (Tail Tali/Oil)', 'Asafoetida (Hing)', 'Cumin seeds (Jeera)', 'White urad dal (Urad Dal)']\n",
-      "Instructions: ['Step 1: Cook rice separately and keep it aside. Soak Chickpea lentils for about 30 minutes, then pressure cook with enough water until tender.', 'Step 2: Heat oil in a pan, add cumin seeds and let them splutter. Add dry red chilli, asafoetida, and sauté the spices for a few seconds.', 'Step 3: Add chopped tomatoes to the pan and cook until they become soft. Then, add the cooked chickpea lentils along with the cooking liquid (adjust consistency according to preference).', 'Step 4: Simmer the mixture on low heat, stirring occasionally, for about 10 minutes or until the oil starts separating from dal. Add salt and mix well.', 'Step 5: In a separate pan, roast cashew peanuts lightly. Grind them coarsely (optional). Sprinkle over the cooked chickpea lentils along with the BC Belle Bhat powder before serving.', 'Step 6: Serve this delicious Chana Dal (Chickpea Lentil) dish with cooked rice, gourd elder greens and phulka (Indian flatbread). Enjoy your meal!']\n",
-      "0.3076923076923077\n",
-      "0.3333333333333333\n"
+      "      - Step 1: Cook the rice as per package instructions and keep it aside.\n",
+      "      - Step 2: Pressure cook the chickpea lentils, green chili, and a pinch of salt until tender.\n",
+      "      - Step 3: Heat oil in a pan. Add cumin seeds, mustard seeds, hing, dry red chili, and cashew and peanuts. Sauté until they change color.\n",
+      "      - Step 4: Add cooked chickpea lentils mixture to the pan and sauté for a few minutes.\n",
+      "      - Step 5: Add the cooked rice to the pan along with the bc belle bhat powder. Mix well.\n",
+      "      - Step 6: Serve this spiced, flavored rice (Khichdi) with tomato slices as side dish for dinner.\n",
+      "Ingredients: ['Tomato', 'Salt', 'Chickpea lentils', 'Green chili', 'Rice', 'Mustard seeds', 'Bc belle bhat powder', 'Dry red chilli', 'Cashew and peanuts', 'Oil', 'Asafoetida', 'Cumin seeds', 'White urad dal']\n",
+      "Instructions: ['Step 1: Cook the rice as per package instructions and keep it aside.', 'Step 2: Pressure cook the chickpea lentils, green chili, and a pinch of salt until tender.', 'Step 3: Heat oil in a pan. Add cumin seeds, mustard seeds, hing, dry red chili, and cashew and peanuts. Sauté until they change color.', 'Step 4: Add cooked chickpea lentils mixture to the pan and sauté for a few minutes.', 'Step 5: Add the cooked rice to the pan along with the bc belle bhat powder. Mix well.', 'Step 6: Serve this spiced, flavored rice (Khichdi) with tomato slices as side dish for dinner.']\n",
+      "0.6153846153846154\n",
+      "0.6666666666666666\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.7332057422104357"
+       "0.4245753016423113"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
     "\n",
     "# Extracting ingredients\n",
     "ingredients_section = response.split(\"Ingredients Used:\")[1].split(\"Instructions:\")[0].strip()\n",
-    "gen_ingredients = [ingredient.strip('- ').strip() for ingredient in ingredients_section.split('\\n') if ingredient]\n",
+    "gen_ingredients = [re.sub(r'\\s*\\(.*?\\)', '', ingredient.strip('- ').strip()) for ingredient in ingredients_section.split('\\n') if ingredient]\n",
     "\n",
     "# Extracting instructions\n",
     "instructions_section = response.split(\"Instructions:\")[1].strip()\n",
